fixed too large spacings in nav

--- a/CSS_files/index.css
+++ b/CSS_files/index.css
@@ -31,7 +31,7 @@ nav{
   color: rgb(226,226,226);
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-size: 20px;
+  font-size: clamp(20px, 8vw, 20px);
 }
 .logo a{
   text-decoration: none;
@@ -40,7 +40,7 @@ nav{
 .nav-links{
   display: flex;
   justify-content: space-around;
-  width: clamp(45%,8vw,30%);
+  width: clamp(300px,8vw,300px);
   z-index: 101;
 }
 .nav-links li{
